<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Galaxy Max Hz</string>
    <string name="lbl_enable_msm">Enable Motion Smoothness</string>
    <string name="buy_adfree">Buy Premium|Coffee</string>
    <string name="resolution">Resolution &amp; Motion Smoothness Toggle</string>
    <string name="act">Activate Premium|Trial</string>
    <string name="max_hz">Max Hz</string>
    <string name="max_hz_for_psm">Max Hz for Power Saving Mode</string>
    <string name="feat_n_a" tools:keep="@string/feat_n_a">Feature Not Supported</string>
    <string name="min_hz_for_toggle">Lowest Hz for Toggle</string>
    <string name="adaptive">Adaptive</string>
    <string name="high">High</string>
    <string name="refresh_rate_mon">Refresh Rate Monitor</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="top">Top</string>
    <string name="bottom">Bottom</string>
    <string name="use_qstile_reso_switch">Use the included quick settings (qs) tile to quickly switch screen resolution.</string>
    <string name="center">Center</string>
    <string name="info_qs_max_hz">Includes a quick setting tile to change max hz</string>
    <string name="info_qs_rtrr">Includes a quick setting tile to turn-on refresh rate monitor.</string>
    <string name="s_off_mod">Screen-off Mods</string>
    <string name="force_hz_mod">Force Lowest Hz</string>
    <string name="s_off_hz_inf">This will set the screen-off/AOD refresh rate to the lowest hz.\nScreen-off refresh rate: %s</string>
    <string name="chng_res_stng">%s resolution setting does not support high/adaptive refresh rate.
        Change the resolution and motion smoothness mode first in the settings.
        \n\nThis app can easily switch resolution and motion smoothness mode using the quick settings tile once WRITE_SECURE_SETTINGS permission setup is performed using ADB.
    </string>
    <string name="chng_res_qs">%s resolution setting does not support high/adaptive
        refresh rate. You can quickly change the resolution using the quick setting tile included this app.
    </string>
    <string name="psm_on_inf">During Power Savings Mode, refresh rate is restricted to standard (60hz).
        Turn it off in the settings first and set the refresh rate mode to Adaptive/High.
        \n\nThis app can bypass this restriction once the WRITE_SECURE_SETTINGS permission setup is performed using ADB.</string>
    <string name="rrm_std_inf">Motion smoothness mode is currently set to Standard. Change it first in the settings.
        \n\nThis app can easily change the Motion Smoothness Mode to Adaptive/High once ADB setup is performed. This works even on Power Savings Mode.
    </string>
    <string name="input_ac_inf">If you lost premium because of resetting this device, enter activation code that was sent to your email to reactivate premium.</string>
    <string name="show_ns">Show Net Speed Indicator</string>
    <string name="bit" translatable="false">Bits/sec(b/s)</string>
    <string name="byt" translatable="false">Bytes/sec(B/s)</string>
    <string name="combined">Combined</string>
    <string name="upload">Upload</string>
    <string name="download">Download</string>
    <string name="font_size">Overlay Font Size</string>
    <string name="overlay_pos">Overlay Position</string>
    <string name="overlay">Overlay</string>
    <string name="statusbar">Statusbar</string>
    <string name="perm_appx">\n\nWhen adb setup is performed, you can do the following with this app:
        \n- Quickly switch screen resolutions
        \n- (Auto)activate/keep Adaptive or High motion smoothness on Power Saving Mode
        \n- Auto activate power saving mode on screen-off
        \n- Use the quick-doze mod (premium)
        \n- Apply Adaptive refresh rate mod even on non-natively supported device(premium)
        \n- Auto Sensors Off(premium)
    </string>
    <string name="ac_none">You entered no activation code.</string>
    <string name="in_bd">Enter Activation Code</string>
    <string name="apply">Apply</string>
    <string name="psm_on">Power Saving Mode is On</string>
    <string name="chng_res">Change Resolution</string>
    <string name="open_settings">Open Settings</string>
    <string name="chng_res_failed">Failed to change screen resolution</string>
    <string name="one_res_def">Only one resolution defined in the system.</string>
    <string name="rrp_not_loaded">Refresh rates profile not yet loaded. Try again.</string>
    <string name="sot_no_perm">Show on top permission is not granted!</string>
    <string name="cie">Error! Please check internet connection and try again.</string>
    <string name="aca">Invalid activation code.</string>
    <string name="afa">Premium successfully activated!</string>
    <string name="afu">Premium trial already used and expired.</string>
    <plurals name="aha">
        <item quantity="one">Premium trial activated: %d day left</item>
        <item quantity="other">Premium trial activated: %d days left</item>
    </plurals>
    <string name="nlh">No premium license found for this %s device.</string>
    <string name="edit">Edit</string>
    <string name="quick_doz_mod">Quick-Doze Mod</string>
    <string name="quick_mod_inf">Quickly enter into doze mode when the screen is off, without being interrupted by motion, to improve idle battery usage.</string>
    <string name="quick_doz_mod_mwi">Initial maintenance window interval in minutes (0 = no maintenance window)</string>
    <string name="quick_doz_mod_inf2">
        Doze mode extends battery life by deferring app background CPU and network activity.
        While in doze, the device periodically enters a maintenance window (MW), during which apps can complete pending work (syncs, jobs, etc.).
        The device will continue this cycle, doubling the length of MW interval each time. The longer the MW interval, the better the battery saving.
        Doze mode may cause notification delays on some apps. It will not affect SMS, High Priority FCM and apps which battery optimizations are disabled.
        Doze mode will deactivate once the device is unlocked.
    </string>
    <string name="adp_min_hz">Min Hz for Adaptive</string>
    <string name="enable_as_inf">Click \'Installed services\' on the window that will appear, then enable Galaxy Max Hz service</string>
    <string name="kBps" translatable="false">kB/s</string>
    <string name="MBps" translatable="false">MB/s</string>
    <string name="kbps" translatable="false">kb/s</string>
    <string name="Mbps" translatable="false">Mb/s</string>
    <string name="plus99" translatable="false">99+</string>
    <string name="notif_sp_dl" translatable="false">↓ %1$s %2$s</string>
    <string name="notif_sp_ul" translatable="false">↑ %1$s %2$s</string>
    <string name="notif_sp_cb" translatable="false">↕ %1$s %2$s</string>
    <string name="Gbps" translatable="false">Gb/s</string>
    <string name="GBps" translatable="false">GB/s</string>
    <string name="Tbps" translatable="false">Tb/s</string>
    <string name="TBps" translatable="false">TB/s</string>
    <string name="adp_delay">Adaptive min Hz delay(seconds)</string>
    <string name="cur_rr_h">Current Refresh Rate: %s Hz</string>
    <string name="show_ns_card">Show Netspeed Indicator Card</string>
    <string name="lbl_rrm">Refresh Rate Mods</string>
    <string name="prr_psm">Keep Smoothness on Power Saving Mode</string>
    <string name="actvt_trial">Activate free trial</string>
    <string name="auto_psm">Power Saving Mode on Screen-off</string>
    <string name="reso_opts">Enabled Options</string>
    <string name="requires_ws_perm_h">
        %1$s needs a special permission to execute this feature.
        Click the ADB setup link below to learn how.
        \n\nTLDR: Run \'adb shell pm grant %2$s android.permission.WRITE_SECURE_SETTINGS\'
        \n\nThis is a one time procedure.
    </string>
    <string name="std">Standard</string>
    <string name="lbl_profiles_h">%sScreen Resolution\nand Refresh Rate Profiles</string>
    <string name="aot_perm_inf" translatable="false">This app needs permission to appear on top in order to work properly. You can disable the notification by long-pressing it and turning off the toggle that will appear.</string>
    <string name="high_mode">High Mode</string>
    <string name="std_mode">Standard Mode</string>
    <string name="adp_mode">Adaptive Mode</string>
    <string name="perm_reqd">Permission Required</string>
    <string name="adb_setup">ADB Setup</string>
    <string name="dismiss">Dismiss</string>
    <string name="allow">Allow</string>
    <string name="allow_aot">Allow Appear on Top</string>
    <string name="allow_bg_act">For the stable background operation of this app, enable \'Allow background activity\' or disable \'Optimize battery usage\'.</string>
    <string name="help">Help</string>
    <string name="reload_profiles">Reload Profiles</string>
    <string name="options">Options</string>
    <string name="data_usage"><u>Data Usage</u></string>
    <string name="psm_options"><u>Power saving mode options</u></string>
    <string name="disable_sync_on_so">Auto-disable sync</string>
    <string name="autosync_settings"><u>Autosync settings</u></string>
    <string name="apps_bat_opt_settings"><u>Apps Battery Optimization Settings</u></string>
    <string name="brightness_threshold">Brightness Threshold for Adaptive</string>
    <string name="sensor_off_info">Device sensors will automatically turn off while screen is off until the device is unlocked.</string>
    <string name="sensors_off_note">
        Important Note: While the SensorsOff tile is on, the device\'s camera and microphone and other sensors are inaccessible.
        Functionalities affected include face unlock, audibility on voice calls (on some) and hinge angle detection, among others.
        Only use this if you clearly understand the effects of enabling sensors off.
        \n\nSecure lock screen is required starting Android 12; alternatively WRITE_SECURE_SETTINGS permission can be granted on previous android version.
    </string>
    <string name="auto_sensors_off_exp">Auto SENSORS OFF</string>
    <string name="sensor_off_setup_info">Do this first: Enable \'Sensors Off\' tile in Settings > Developer options > Quick settings developer tiles. ></string>
    <string name="dev_opt_setup_info">To enable Developer options, go to Settings > About phone > Software info and tap \'Build number\' 7x.</string>
    <string name="so_location_info" translatable="false">Ensure to put the SENSOR Off tile within the first 4 quick settings slots.</string>
    <string name="enable_write_settings">Grant Galaxy Max Hz change system settings permission.</string>
    <string name="as_desc">This service is required for galaxy max hz mods to work.</string>
    <string name="enable">Enable</string>
    <string name="premium_features">Premium Features</string>
    <string name="prevent_high">Prevent switching to High Mode</string>
    <plurals name="access_notif" translatable="false">
        <item quantity="one">"Accessibility service is required for the following - turn this off first to disable accessibility: %s</item>
        <item quantity="other">Accessibility service is required for the following - turn these off first to disable accessibility: %s</item>
    </plurals>
    <string name="no_access_notif" translatable="false">Disabling accessibility service will cause unexpected behavior for the following enabled feature(s): %s</string>
    <string name="acces_req">Enable Accessibility Service</string>
</resources>